--- a/ChallengesAndResults/ChallengesAndResults/ChallengesAndResults.csproj
+++ b/ChallengesAndResults/ChallengesAndResults/ChallengesAndResults.csproj
@@ -8,10 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="clistdance.txt" />
+    <None Remove="clisttest1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.7.0" PrivateAssets="all" />
 
     <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="clistdance.txt" />
+    <EmbeddedResource Include="clisttest1.txt" />
   </ItemGroup>
 
 </Project>
